[metadata]
name = phangs_jwst_tools
author = PHANGS team
author_email = rosolowsky@ualberta.ca
license = GNU GPL v3+
license_files = licenses/LICENSE.rst
url = http://phangs.org/
description = phangs jwst tools
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = low-sky/phangs_jwst_tools

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    astropy
    webbpsf
    photutils
    scipy
    statsmodels
    pandas

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
phangs_jwst_tools = data/*

[tool:pytest]
testpaths = "phangs_jwst_tools" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    phangs_jwst_tools/_astropy_init*
    phangs_jwst_tools/conftest.py
    phangs_jwst_tools/*setup_package*
    phangs_jwst_tools/tests/*
    phangs_jwst_tools/*/tests/*
    phangs_jwst_tools/extern/*
    phangs_jwst_tools/version*
    */phangs_jwst_tools/_astropy_init*
    */phangs_jwst_tools/conftest.py
    */phangs_jwst_tools/*setup_package*
    */phangs_jwst_tools/tests/*
    */phangs_jwst_tools/*/tests/*
    */phangs_jwst_tools/extern/*
    */phangs_jwst_tools/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
